# Logger

./: CMakeLists.txt  README.md  log_file.txt  log_writter.cpp  log_writter.hpp  main.cpp
src/: log_writter.cpp  log_writter.hpp  logger.cpp  logger.hpp  main.cpp  some_file.cpp  some_file.hpp
